# sentiment_analysis

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  analyse de sentiments.ipynb  classification_report.txt  common.py  config.json  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: azure_deploy.yml  ci.yml
app/: main.py  streamlit_app.py
classification report/: classification_report_GRU.txt  classification_report_LSTM.txt  classification_report_LogReg.txt
mlruns/0/: meta.yaml
mlruns/845081964173085733/: meta.yaml
mlruns/845081964173085733/1844686f430d4cdd87d25207da361063/: meta.yaml
mlruns/845081964173085733/2db225317d5445b989bcf4dfe4d9237f/: meta.yaml
mlruns/845081964173085733/3b43c9bb88554e26aeb84a93ac35f588/: meta.yaml
models/: final_trained_light_LSTM.h5  lstm.h5
notebook/: analyse de sentiments.ipynb  analyse_de_sentiments.py
other models and tokenizer/: final_trained_gru_model.h5  model_checkpoint_gru.keras  model_checkpoint_lstm_light.keras
project/models/lstm_fasttext/model/: MLmodel  conda.yaml  (+1 more)
scripts_model/: bert_cnn_model.py  bert_dense_model.py  gru_glove.py  gru_word2vec.py  light_lstm_glove.py  regression_logistique_tfidf.py  requirements.txt  scripts.py
src/: main.py  preprocessing.py  sentiment_eda.py
src/models/: bert_cnn.py  common.py  distilbert_cnn.py  lstm_fasttext.py  lstm_word2vec.py  tfidf_logistic_regression.py
src/sentiment_analysis_project.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_api.py  test_pred.py  test_preprocessing.py
tests/__pycache__/: test_api.py
(+111 files in other folders)
