[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Julien Cantalapiedra <jcantalapiedra1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gensim = "4.3.3"
joblib = "1.4.2"
mlflow = "2.19.0"
numpy = "1.26.4"
pandas = "2.2.2"
protobuf = "4.25.5"
scikit-learn = "1.6.0"
tensorflow = "2.17.1"
transformers = "4.47.1"
opencensus = "*"
opencensus-ext-azure = "*"
pyngrok = "5.2.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
